# docker-opcua-server

./: CMakeLists.txt  Dockerfile  README.md
src/: CMakeLists.txt  server.cpp
